Add canvas click handler

--- a/components/canvas-playground/canvas-playground.html
+++ b/components/canvas-playground/canvas-playground.html
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="canvas-wrapper">
-            <canvas :width="canvasWidth" :height="canvasHeight" class="canvas-one">
+            <canvas :width="canvasWidth" :height="canvasHeight" class="canvas-one" @click.prevent="canvasClick">
                 no canvas support
             </canvas>
         </div>
