Canvas playground improvements

--- a/components/canvas-playground-top/canvas-playground-top.html
+++ b/components/canvas-playground-top/canvas-playground-top.html
@@ -1,11 +1,11 @@
 
 <div class="top-settings">
-    <div class="top-setting-item">
+    <!-- <div class="top-setting-item">
         <label for="gravity">
             gravity
         </label>
         <input id="gravity" v-model="gravity" type="checkbox" />
-    </div>
+    </div> -->
     <div class="top-setting-item">
         <label for="autoStrokeWidth">
             Auto stroke width
