--- a/components/canvas-playground/canvas-playground.html
+++ b/components/canvas-playground/canvas-playground.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="canvas-control">
                         <label>
-                            Air resistance <strong class="canvas-value-wrapper">({{ 1 - dXTimes }})</strong>
+                            Air resistance <strong class="canvas-value-wrapper">({{ round(1 - dXTimes, 2) }})</strong>
                         </label>
                         <input v-model.number="dXTimes" class="range-input" type="range" min="0.01" max="0.99" step="0.01" />
                         <a class="reset-dxtimes fa fa-undo" @click.prevent="resetDXTimes"></a>
