Add component translations

--- a/components/canvas-playground-top/canvas-playground-top.html
+++ b/components/canvas-playground-top/canvas-playground-top.html
@@ -8,19 +8,19 @@
     </div> -->
     <div class="top-setting-item">
         <label for="autoStrokeWidth">
-            Auto stroke width
+            {{ translate('Auto stroke width') }}
         </label>
         <input id="autoStrokeWidth" v-model="autoStrokeWidth" type="checkbox" />
     </div>
     <div class="top-setting-item">
         <label for="autoSize">
-            Autosize
+            {{ translate('Autosize') }}
         </label>
         <input id="autoSize" v-model="autoSize" type="checkbox" />
     </div>
     <div class="top-setting-item">
         <label for="autoCenter">
-            Autocenter
+            {{ translate('Autocenter') }}
         </label>
         <input id="autoCenter" v-model="autoCenter" type="checkbox" />
     </div>
@@ -28,14 +28,14 @@
         <div v-show="dataChanged" class="top-setting-item">
             <button class="reset-all" @click.prevent="resetAll">
                 <span class="fa fa-undo"></span>
-                Reset all
+                {{ translate('Reset all') }}
             </button>
         </div>
     </transition>
     <div class="top-setting-item">
         <button class="download-image" @click.prevent="saveImage">
             <span class="fa fa-download"></span>
-            Save
+            {{ translate('Save') }}
         </button>
         <div class="download-image-placeholder">
             <input accept=".png" class="file-picker" type="file" v-bind:nwsaveas="'smiley.png'" v-on:change="doSaveImage" />
